# runwayops_demo

./: .gitignore  AGENTIC_INTEGRATION.md  AGENTS.md  AGENT_CONSOLE_EXPLAINED.md  AGENT_DETAILS_GUIDE.md  AGENT_LOGGING_GUIDE.md  AGENT_REACCOMMODATION.md  AI_OPTIONS_INTEGRATION.md  AI_WHY_REASONING.md  AMADEUS_CHANGES_SUMMARY.md  AMADEUS_INTEGRATION_GUIDE.md  APIV2_MIGRATION_SUMMARY.md  CHANGES_SUMMARY.md  LLM_PROVIDERS.md  MULTI_PROVIDER_SUMMARY.md  PREDICTIVE_SIGNALS_INTEGRATION.md  QUICK_LOGGING_REFERENCE.md  README.md  TESTING_AI_SUGGESTIONS.md  VERCEL_DEPLOYMENT.md  WHATIF_PREDICTIVE_FEATURES.md  agentic_system.md  aircraft_gen.md  amadeus_integration.md  cathay_passenger.md  data_layer_gpt.md  deploy.sh  disruption_and_crew.md  docker-compose.yml  flightmonitortask.md  generator.md  google_a2a_agents_apiV2.md  install.sh  package.json  pnpm-lock.yaml  report.html  report_kimi.docx  run_dev.sh
backend/: .dockerignore  .env  .env.deploy.example  .env.example  Dockerfile  PROVIDER_EXAMPLES.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  exceptions.py  main.py
backend/app/__agents/: README.md  agent_logger.py  llm_factory.py  nodes.py
backend/app/_agents/: __init__.py  state.py  workflow.py
backend/app/agents/: nodes.py  state.py  workflow.py
backend/app/agentsv2/: IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  __init__.py  agents.py  amadeus_tools.py  api.py  llm.py  state.py  test_integration.py  test_result.json  tools.py  workflow.py
backend/app/providers/: __init__.py  base.py  mongo_stream.py  realtime.py  (+2 more)
(+83 files in other folders)
