[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "uvicorn[standard]==0.30.6",
    "motor==3.6.0",
    "faker==30.6.0",
    "python-dateutil==2.9.0.post0",
    "pymongo==4.9.1",
    "kafka-python==2.0.2",
    "tz>=0.2.2",
]
